--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="navbar">
-    <p>segsg</p>
-  </div>
   <div class="flex">
     <div id="vertical-line"></div>
-    <div class="encrypt-or-decrypt-button"><button class="btn btn-primary">sdvdsv</button></div>
+    <div class="encrypt-or-decrypt-button">
+      <div id="vertical-line"></div>
+      <button class="btn btn-primary"><h3>Encrypt Decrypt</h3></button>
+    </div>
     
   </div>
   
