--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
   <div class="flex">
     <div id="vertical-line"></div>
-    <div class="encrypt-or-decrypt-button"><button class="btn btn-primary">sdvdsv</button></div>
+    <div class="encrypt-or-decrypt-button">
+      <button type="button" class="btn btn-primary btn-lg">Large button</button>
+    </div>
     
   </div>
   
